2020-11-10  Youenn Fablet  <youenn@apple.com>

        Update WebRTC liwebrtc to M87
        https://bugs.webkit.org/show_bug.cgi?id=218436

        Reviewed by Eric Carlson.

        We now have to explicitly support all packetization modes, which is similar to what Chrome is doing.

        * webrtc/h264-packetization-mode.html:

2020-11-10  Rob Buis  <rbuis@igalia.com>

        Parse aspect-ratio CSS property
        https://bugs.webkit.org/show_bug.cgi?id=218437

        Reviewed by Darin Adler.

        Adapt platform test expectations.

        * platform/gtk/imported/w3c/web-platform-tests/css/cssom/cssstyledeclaration-csstext-expected.txt:
        * platform/ios-wk2/imported/w3c/web-platform-tests/css/cssom/cssstyledeclaration-csstext-expected.txt:
        * platform/wpe/imported/w3c/web-platform-tests/css/cssom/cssstyledeclaration-csstext-expected.txt:

2020-11-10  Eric Carlson  <eric.carlson@apple.com>

        REGRESSION (r269407): ASSERTION FAILED: willBeComposited == needsToBeComposited(layer, queryData) in WebCore::RenderLayerCompositor::computeCompositingRequirements
        https://bugs.webkit.org/show_bug.cgi?id=218723
        <rdar://problem/71208603>

        Unreviewed test gardening.

        * platform/mac/TestExpectations: Skip plugins/quicktime-plugin-replacement.html, the plug-in
        replacement is an iOS-only feature.

2020-11-10  Andres Gonzalez  <andresg_22@apple.com>

        Fix for LayoutTests/accessibility/mac/search-predicate.html in isolated tree mode.
        https://bugs.webkit.org/show_bug.cgi?id=218732

        Reviewed by Chris Fleizach.

        This test now passes in both isolated tree mode on and off.

        * accessibility/mac/search-predicate.html:

2020-11-10  Chris Dumez  <cdumez@apple.com>

        Crash when accessing OfflineAudioContext.length after failing to construct rendering AudioBuffer
        https://bugs.webkit.org/show_bug.cgi?id=218754
        <rdar://problem/71186978>
